test/expected/using_c_int_least32_t.out
using int_least32_t = char
                      ^
23: error: type "char" redefinition incompatible with original type "int"
